<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_title"
        android:textSize="18sp"
        android:layout_marginBottom="16dp" />


    <Button
        android:id="@+id/toENButton"
        android:layout_width="155dp"
        android:layout_height="41dp"
        android:layout_gravity="center"
        android:text="@string/btn_text_en"
        android:textAlignment="center"
        android:textStyle="bold" />


    <Button
        android:id="@+id/toVIButton"
        android:layout_width="155dp"
        android:layout_height="41dp"
        android:text="@string/btn_text_vi" />
</LinearLayout>
